add patient manage appointments endpoints
